turtleart.stairs.Stairs.scala.error
Compilation error:
Stairs:1: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
override def run() {for (i <- 1 to 6 ) {avance(35);droite(90);avance(35);gauche()}} 
                                                                               ^